[package]
name = "passivetotal-client"
version = "0.1.0"
authors = ["Geoffrey Alexander <geoff.i.alexandg@gmail.com>"]
description = "Simple CLI client for the passivetotal-reqest crate."
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.31"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
serde_json = "1.0"
toml = "0.4"
passivetotal-reqwest = { git = "https://github.com/alexandg/passivetotal-reqwest.git" }
structopt = "0.2.7"
structopt-derive = "0.2.7"
